# altscodex-sdk-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
altscodex/: __init__.py  backend.py  exceptions.py  frontend.py  types.py
examples/: fastapi_app.py
scripts/: publish.sh
tests/: test_backend.py  test_frontend.py
