[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "altscodex-sdk"
version = "2.1.0"
description = "AltsCodex DeOAuth SDK for Python (FastAPI) — port of @altscodex/sdk"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "altscodex" }]
keywords = ["altscodex", "deoauth", "oauth", "sdk", "fastapi", "blockchain", "login", "jwt"]
classifiers = [
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.95"]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "fastapi>=0.95",
]

[project.urls]
Homepage = "https://developers.altscodex.com"
Issues = "https://developers.altscodex.com"

[tool.setuptools.packages.find]
include = ["altscodex*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
